[tool.poetry]
name = "toy-example-clustering"
version = "0.1.0"
description = ""
authors = ["Aleja Duque-Torres - alejandra.duque-torres@scch.at alduque@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.0"
scikit-learn = "^1.5.2"
tensorflow = "^2.17.0"
tensorflow-intel = "^2.17.0"
joblib = "^1.4.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
